@startuml

title Tomato - The Automatic Greenhouse

[*] --> Initialise : E_START
Initialise --> CheckOperationMode : E_CONTINEU

CheckOperationMode --> CheckTimeToPass : E_USER

CheckTimeToPass --> PassTime : E_PASS_TIME
CheckTimeToPass --> CheckLightState : E_DONT_PASS_TIME
PassTime --> CheckLightState : E_TIME_PASSED

CheckLightState --> ToggleLight : E_LIGHT_TOGGLE
ToggleLight --> CheckLightState : E_LIGHT_TOGGLED
CheckLightState --> Error : E_LIGHT_ERROR
CheckLightState --> CheckHeaterState : E_LIGHT_STATE_OK

CheckHeaterState --> ToggleHeater : E_HEATER_TOGGLE
ToggleHeater --> CheckHeaterState : E_HEATER_TOGGLED
CheckHeaterState --> Error : E_HEATER_ERROR
CheckHeaterState --> CheckWaterLevel : E_HEATER_STATE_OK

CheckWaterLevel --> WaterPlant : E_WATER_PLANT
WaterPlant --> CheckWaterLevel : E_WATERED_PLANT
CheckWaterLevel --> Error : E_WATERING_ERROR
CheckWaterLevel --> CheckMoreTimeToPass : E_PLANT_WATER_OK

Error --> CheckOperationMode : E_RESOLVE_ERROR

CheckMoreTimeToPass --> CheckTimeToPass : E_TIME_TO_PASS
CheckMoreTimeToPass --> WaitForUserInput : E_NO_TIME_TO_PASS

WaitForUserInput --> WaitForUserInput : E_NON_VALID_INPUT

WaitForUserInput --> PrintUserHelp : E_HELP
PrintUserHelp --> WaitForUserInput : E_HELP_PRINTED

WaitForUserInput --> IncreaseTime : E_TIME
IncreaseTime --> CheckTimeToPass : E_INCREASE_TIME

WaitForUserInput --> UpdateSystemInfo : E_UPDATE
UpdateSystemInfo --> WaitForUserInput : E_SYSTEM_INFO_UPDATED

WaitForUserInput --> CheckOperationMode : E_SERVICE

CheckOperationMode --> WaitForServiceInput : E_SERVICE

WaitForServiceInput --> PrintServiceHelp : E_HELP
PrintServiceHelp --> WaitForServiceInput : E_HELP_PRINTED

WaitForServiceInput --> WaitForServiceInput : E_NON_VALID_INPUT
WaitForServiceInput --> CheckOperationMode : E_USER

WaitForServiceInput --> AskNewPlantInfo : E_ADD
AskNewPlantInfo --> WaitForServiceInput : E_NEW_PLANT_SAVED

WaitForServiceInput --> AskForNewActivePlant : E_CHANGE
AskForNewActivePlant --> WaitForServiceInput : E_CHANGE_ACTIVE_PLANT

WaitForServiceInput --> ServiceToggleHeater : E_HEATER
ServiceToggleHeater --> WaitForServiceInput : E_HEATER_TOGGLED
ServiceToggleHeater --> Error : E_HEATER_ERROR

WaitForServiceInput --> ServiceTogglePump : E_PUMP
ServiceTogglePump --> WaitForServiceInput : E_PUMP_TOGGLED
ServiceTogglePump --> Error : E_PUMP_ERROR

WaitForServiceInput --> ServiceToggleLight : E_LIGHT
ServiceToggleLight --> WaitForServiceInput : E_LIGHT_TOGGLED
ServiceToggleLight --> Error : E_LIGHT_ERROR

WaitForServiceInput --> ServiceWaterPlant : E_WATER
ServiceWaterPlant --> WaitForServiceInput : E_WATERED_PLANT
ServiceWaterPlant --> Error : E_WATERING_ERROR

WaitForServiceInput --> UpdateServiceSystemInfo : E_UPDATE
UpdateServiceSystemInfo --> WaitForServiceInput : E_SYSTEM_INFO_UPDATED

@enduml